--- a/GetMeOutaHere/www/index.html
+++ b/GetMeOutaHere/www/index.html
@@ -37,6 +37,7 @@
           <ion-tab title="Home" icon-on="ion-ios-filling" icon-off="ion-ios-filling-outline"></ion-tab>
           <ion-tab title="Contacts" icon-on="ion-ios-filling" icon-off="ion-ios-filling-outline"></ion-tab>
           <ion-tab title="Map" icon-on="ion-ios-filling" icon-off="ion-ios-filling-outline"></ion-tab>
+          <ion-tab title="Map" icon-on="ion-ios-filling" icon-off="ion-ios-filling-outline"></ion-tab>
       </ion-tabs>
     </ion-pane>
   </body>
